--- a/color 3.html
+++ b/color 3.html
@@ -5,6 +5,7 @@
 <head>< HASSAN'S CREATION</head>
 </head>
 <body>
+	<h2>mangoes</h2>
 <p>my first attept was git installation.first checked the git version.</p>
 <p>second was git config --global user.name</p>
 </body>
